--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
+# Output directories
 dump/
+output/
+
+# Input files (may contain sensitive URLs)
+sites.txt
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Virtual environments
+venv/
+env/
+.venv/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 
